Minor fixes according to PR comments.